--- a/app/src/main/res/layout-xhdpi/actvity_availablity.xml
+++ b/app/src/main/res/layout-xhdpi/actvity_availablity.xml
@@ -39,15 +39,78 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="6">
-           <CalendarView
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"></CalendarView>
+            <com.applikeysolutions.cosmocalendar.view.CalendarView
+                android:id="@+id/calendar_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+               />
         </RelativeLayout>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight=".1">
+            android:layout_weight="3">
+            <LinearLayout
+                android:id="@+id/ll_settings"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal">
 
+                <RadioGroup
+                    android:id="@+id/rg_orientation"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:checkedButton="@+id/rb_vertical">
+
+                    <RadioButton
+                        android:id="@+id/rb_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/horizontal" />
+
+                    <RadioButton
+                        android:id="@+id/rb_vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/vertical" />
+
+                </RadioGroup>
+
+                <RadioGroup
+                    android:id="@+id/rg_selection_type"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:checkedButton="@+id/rb_single">
+
+                    <RadioButton
+                        android:id="@+id/rb_single"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/single" />
+
+                    <RadioButton
+                        android:id="@+id/rb_multiple"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/multiple" />
+
+                    <RadioButton
+                        android:id="@+id/rb_range"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/range" />
+
+                    <RadioButton
+                        android:id="@+id/rb_none"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/none" />
+
+                </RadioGroup>
+
+            </LinearLayout>
         </FrameLayout>
         <Button
             android:layout_width="match_parent"
